# RestSharp-.NET-2.0-Fork

./: .gitignore  DEPENDENCY_AUDIT.md  MIGRATION_NOTES.md  README.markdown  README.python.md  RestSharp.Core.sln  RestSharp.Net2.sln  RestSharp.Net48.sln  RestSharp.sln  package.cmd  pyproject.toml  requirements.txt  restsharp.nuspec
RestSharp.Core/: Placeholder.cs  RestSharp.Core.csproj
RestSharp.Core.Tests/: InfrastructureValidationTests.cs  JsonSerializationCompatibilityTests.cs  RestSharp.Core.Tests.csproj
RestSharp.IntegrationTests/: AsyncRequestTests.cs  AsyncTests.cs  AuthenticationTests.cs  CompressionTests.cs  CookieTests.cs  ErrorHandlingTests.cs  FileTests.cs  FileUploadTests.cs  OAuth1IntegrationTests.cs  ProxyTests.cs  RedirectTests.cs  RestSharp.IntegrationTests.csproj  StatusCodeTests.cs  SyncRequestTests.cs  TimeoutTests.cs  oAuth1Tests.cs  packages.config
RestSharp.Lib/: RestSharp.Lib.csproj
RestSharp.Net2/: RestSharp.Net2.csproj
RestSharp.Net7/: RestSharp.Net7.csproj
RestSharp.Tests.Coverage/: AdditionalCoverageTests.cs  AsyncAndExtensionTests.cs  AttributeAndContribTests.cs  AuthenticatorTests.cs  CoverageBoostTests.cs  DotNetXmlTests.cs  ExtensionTests.cs  FactoryAndEnumTests.cs  FileParameterTests.cs  Final20Tests.cs  FinalCoverageTests.cs  HttpCookieTests.cs  HttpResponseTests.cs  HttpSyncTests.cs  HttpTests.cs  HttpUtilityExtendedTests.cs  HttpUtilityTests.cs  JsonSerializerTests.cs  Last50Tests.cs  MiscExtensionsTests.cs  OAuth1AuthenticatorTests.cs  OAuthInternalTests.cs  OAuthTests.cs  ParameterTests.cs  PushTo80Tests.cs  SmokeTest.cs  (+15 more)
(+129 files in other folders)
